--- a/css/main.css
+++ b/css/main.css
@@ -81,7 +81,7 @@
 .menu-branding .portrait {
   width: 249px;
   height: 250px;
-  background: url("../img/Project/portrait2.jpeg");
+  background: url("../img/Project/portraitMe.jpeg");
   background-position-x: 51%;
   background-position-y: 41%;
   border-radius: 50%;
